# empty-cpp-project

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
